IntersectionObserver callback for a visible sentinel node within a container with CSS transform animations is triggered multiple times, but should only be triggered once https://bugs.webkit.org/show_bug.cgi?id=273928 rdar://127804335

Reviewed by Simon Fraser.

Make sure we use RenderLayer::currentTransform() when querying the target's transform to ensure that it accounts
for accelerated animations. Indeed, RenderLayer::transform() will only account for the transform set on the
`RenderStyle` which does *not* update during the course of an accelerated property animation.

* LayoutTests/imported/w3c/web-platform-tests/intersection-observer/transform-animation-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/intersection-observer/transform-animation.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeVisibleRectsInContainer const):

Canonical link: https://commits.webkit.org/278763@main